# sfml-pong

./: CMakeLists.txt  README.md
include/: app.hpp  ball.hpp  entity.hpp  platform.hpp
src/: app.cpp  ball.cpp  entity.cpp  main.cpp  platform.cpp
